--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,14 @@ div [class*="right floated"] {
   float: right;
   margin-right: 0.25em;
 }
+
+#orange {
+  width: 12px;
+  height: 12px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background: #FFE57F;
+  display: inline-block;
+  border: 1px solid #212121;
+}
